加入杨曾辉设计的的译码转换类

--- a/哈夫曼编码/哈夫曼编码.vcxproj
+++ b/哈夫曼编码/哈夫曼编码.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Conventer.h" />
     <ClInclude Include="HuffmanTree.h" />
   </ItemGroup>
   <ItemGroup>
